--- a/style.css
+++ b/style.css
@@ -55,12 +55,6 @@ section {
     border-radius: 0px 7px 7px 0px;
 }
 
-.right img {
-    height: 100%;
-    width: 100%;
-    
-}
-
 .left h1 {
     font-size: 30px;
     color: var(--mainHeadingAndStats);
@@ -109,4 +103,67 @@ section {
 .attribution a {
     text-decoration: none;
     color: blue;
+}
+
+@media (max-width: 375px) {
+
+    .container {
+        width: 80%;
+        height: 550px;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .right {
+        height: 100%;
+        width: 100%;        
+        background-image: linear-gradient(
+            hsla(277, 64%, 61%, 0.5) 0%,
+            hsla(277, 64%, 61%, 0.5) 100%
+        ), url(images/image-header-desktop.jpg);
+        border-radius: 7px 7px 0px 0px;
+
+    }
+
+    .left {
+        width: 100%;
+        height: 70%;
+
+    }
+
+    .left h1 {
+        font-size: 22px;
+        margin: 30px 45px 15px 45px;
+        text-align: center;
+    }
+
+    .left-paragraph {
+        font-size: 12px;
+        margin: 0px 45px 0px 45px;
+        text-align: center;
+    }
+
+    .data {
+        margin: 30px 45px 50px 45px;
+        display: grid;
+        grid-template-rows: 33% 33% 33%;
+        grid-template-columns: auto;
+        gap: 15px;
+    }
+
+    .caja {
+        text-align: center;
+        margin-top: 0px;
+    }
+
+    .caja b {
+        font-size: 20px;
+        
+        
+    }
+
+    .caja p {
+        font-size: 10px;
+    }
+
 }
